Fix misaligned updates toolbar, settings consistency, update changelog

--- a/styles/atom.less
+++ b/styles/atom.less
@@ -110,6 +110,15 @@ atom-notifications {
 }
 
 .settings-view {
+
+
+	.updates-heading-container {
+		align-items: initial;
+	}
+	.update-all-button.btn-primary {
+		margin-left: 0.34375rem;
+	}
+
 	atom-text-editor[mini] {
 		padding-top: 0.375em;
 		padding-bottom: 0.375em;
@@ -335,10 +344,6 @@ atom-notifications {
 		box-shadow: @shadow-1;
 		border: 0;
 		transition: box-shadow 0.15s @standard-bezier, background 0.15s @standard-bezier;
-
-		&:first-child {
-			margin-top: 0.9375em;
-		}
 
 		&:active,
 		&:hover {
